--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:padding="16dp"
+        android:padding="@dimen/fragment_header_padding"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -20,8 +20,8 @@
         <!-- Icono de categorías -->
         <ImageView
             android:id="@+id/editIcon"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="@dimen/fragment_header_icon_size"
+            android:layout_height="@dimen/fragment_header_icon_size"
             android:src="@drawable/classification"
             android:layout_gravity="center_vertical"/>
 
@@ -30,10 +30,10 @@
             android:id="@+id/titleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Categorías"
-            android:textSize="50sp"
+            android:text="@string/fragment_categories_title"
+            android:textSize="@dimen/fragment_header_text_size"
             android:textStyle="bold"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/fragment_header_margin_start"
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
@@ -42,10 +42,11 @@
         android:id="@+id/categoriesRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="@dimen/fragment_header_margin"
+        android:padding="@dimen/fragment_body_padding"
         app:layout_constraintTop_toBottomOf="@id/headerLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="16dp" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
