--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="16dp"
+        android:padding="@dimen/fragment_header_padding"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -18,8 +18,8 @@
         <!-- Icono de noticias -->
         <ImageView
             android:id="@+id/newsIcon"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="@dimen/fragment_header_icon_size"
+            android:layout_height="@dimen/fragment_header_icon_size"
             android:src="@drawable/newspaper"
             android:layout_gravity="center_vertical"/>
 
@@ -28,10 +28,10 @@
             android:id="@+id/newsTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Noticias"
-            android:textSize="60sp"
+            android:text="@string/fragment_home_title"
+            android:textSize="@dimen/fragment_header_text_size"
             android:textStyle="bold"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/fragment_header_margin_start"
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
@@ -40,10 +40,11 @@
         android:id="@+id/newsRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="@dimen/fragment_header_margin"
+        android:padding="@dimen/fragment_body_padding"
         app:layout_constraintTop_toBottomOf="@id/headerLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="16dp" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
