--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,20 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="fragment_header_icon_size">70dp</dimen>
+    <dimen name="fragment_header_text_size">35sp</dimen>
+    <dimen name="fragment_header_margin">20dp</dimen>
+    <dimen name="fragment_header_padding">10dp</dimen>
+    <dimen name="fragment_header_margin_start">10dp</dimen>
+
+    <dimen name="fragment_body_padding">10dp</dimen>
+
+    <dimen name="fragment_login_icon_size">200dp</dimen>
+    <dimen name="fragment_login_margin_top">50dp</dimen>
+    <dimen name="fragment_login_margin">20dp</dimen>
+    <dimen name="fragment_login_padding">10dp</dimen>
+
+    <dimen name="button_width">300dp</dimen>
+    <dimen name="button_height">50dp</dimen>
 </resources>
