--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,27 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/house"
+        android:title="@string/fragment_home_title" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_shoplist"
+        android:icon="@drawable/sign"
+        android:title="@string/fragment_shoplist_title" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_historic"
+        android:icon="@drawable/newspaper"
+        android:title="@string/fragment_historic_title" />
+
+    <item
+        android:id="@+id/navigation_categories"
+        android:icon="@drawable/classification"
+        android:title="@string/fragment_categories_title" />
+
+    <item
+        android:id="@+id/navigation_user"
+        android:icon="@drawable/profile"
+        android:title="@string/fragment_login_title" />
 
 </menu>
