--- a/app/src/main/res/layout/fragment_historic.xml
+++ b/app/src/main/res/layout/fragment_historic.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/soft_grey">
 
     <!-- Encabezado con icono de lista y título -->
     <LinearLayout
@@ -43,8 +44,10 @@
         android:id="@+id/listRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="@dimen/fragment_header_margin"
+        android:layout_marginTop="@dimen/fragment_header_margin"
+        android:layout_marginBottom="60dp"
         android:padding="@dimen/fragment_body_padding"
+        android:nestedScrollingEnabled="true"
         app:layout_constraintTop_toBottomOf="@id/headerLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
