--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -31,6 +31,15 @@
             android:text="Description"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
+
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/buttonDelete"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_margin="5dp"
+        android:src="@drawable/trash"
+        android:layout_gravity="end|center_vertical"/>
 
 </androidx.cardview.widget.CardView>
