--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#0d096e</color>
+    <color name="soft_blue">#1e46be</color>
+    <color name="almost_blue">#c1b0f8</color>
+    <color name="soft_grey">#f3eae8</color>
+    <color name="soft_yellow">#FEFAC4</color>
+
 </resources>
