--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,12 +37,20 @@
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
+    <View
+        android:id="@+id/dividerLine"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/blue"
+        app:layout_constraintTop_toBottomOf="@id/headerLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <!-- Lista de CardViews -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/newsRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/fragment_header_margin"
         android:padding="@dimen/fragment_body_padding"
         android:layout_marginBottom="60dp"
         app:layout_constraintTop_toBottomOf="@id/headerLayout"
