--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -12,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center"
-        android:padding="16dp">
+        android:gravity="center">
 
         <TextView
             android:id="@+id/titleTextView"
@@ -38,7 +37,7 @@
             android:text="Item Text"
             android:textSize="18sp"
             android:textColor="@android:color/black"
-            android:layout_marginTop="8dp"/>
+            android:layout_margin="8dp"/>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
